--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78295">  <td>24/03/04 18:38:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterNewUser.CreateNewUser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.sper.testcases.RegisterNewUser@4145bad8]">CreateNewUser</td> 
-  <td>main@1399794302</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>24/03/04 18:38:01</td>   <td>-5179</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.sper.testcases.RegisterNewUser@4145bad8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1399794302</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>24/03/04 18:38:12</td>   <td>5169</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.sper.testcases.RegisterNewUser@4145bad8]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1399794302</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>24/06/19 17:35:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreCour.createCourse(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.sper.testcases.CreCour@451001e5]">createCourse</td> 
+  <td>main@2017797638</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>24/06/19 17:35:30</td>   <td>-1801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreCour.loginToapp(java.lang.String,java.lang.String)[pri:1, instance:com.sper.testcases.CreCour@451001e5]">loginToapp</td> 
+  <td>main@2017797638</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>24/06/19 17:35:25</td>   <td>-6369</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass1.setup()[pri:0, instance:com.sper.testcases.CreCour@451001e5]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2017797638</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>24/06/19 17:35:43</td>   <td>11014</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass1.teardown()[pri:0, instance:com.sper.testcases.CreCour@451001e5]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2017797638</td>   <td></td> </tr>
 </table>
