--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4878b">  <td>24/02/29 16:36:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogintoApp.loginapp(java.lang.String,java.lang.String)[pri:1, instance:com.sper.testcases.LogintoApp@1a20270e]">loginapp</td> 
-  <td>main@582666172</td>   <td></td> </tr>
-<tr bgcolor="67bb7e">  <td>24/02/29 16:36:51</td>   <td>-3988</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.sper.testcases.LogintoApp@1a20270e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@582666172</td>   <td></td> </tr>
-<tr bgcolor="67bb7e">  <td>24/02/29 16:36:59</td>   <td>4625</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.sper.testcases.LogintoApp@1a20270e]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@582666172</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>24/06/27 09:58:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreCour.createCourse(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.sper.testcases.CreCour@451001e5]">createCourse</td> 
+  <td>main@2017797638</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>24/06/27 09:58:42</td>   <td>-2850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreCour.loginToapp(java.lang.String,java.lang.String)[pri:1, instance:com.sper.testcases.CreCour@451001e5]">loginToapp</td> 
+  <td>main@2017797638</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>24/06/27 09:58:34</td>   <td>-10257</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass1.setup()[pri:0, instance:com.sper.testcases.CreCour@451001e5]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2017797638</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>24/06/27 09:58:56</td>   <td>11718</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass1.teardown()[pri:0, instance:com.sper.testcases.CreCour@451001e5]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2017797638</td>   <td></td> </tr>
 </table>
